webprofiler: data collector minor visual fixes

--- a/views/Profiler/node.html.twig
+++ b/views/Profiler/node.html.twig
@@ -75,6 +75,10 @@
             </li>
         </ul>
     </p>
+    <p>
+        <strong>Warning</strong>: as of now, this does not include all node
+        load calls, but only those made through the <em>EntityManager</em>.
+    </p>
 
     {% set data = collector.loadData %}
 
